--- a/config_extra.json
+++ b/config_extra.json
@@ -1,2 +1,8 @@
 {
+    "IPs": {
+        "(151.101.0.0/16|146.75.0.0/16|199.232.0.0/16)": {
+            "redirect": "151.101.232.0/22",
+            "CDN": "Fastly"
+        }
+    }
 }
