add support for domain cname redirect and use domain to specify target ip

--- a/config_extra.json
+++ b/config_extra.json
@@ -1,8 +1,10 @@
 {
     "IPs": {
         "(151.101.0.0/16|146.75.0.0/16|199.232.0.0/16)": {
-            "redirect": "151.101.232.0/22",
+            "route": "151.101.232.0/22",
             "CDN": "Fastly"
         }
+    },
+    "domains": {
     }
 }
