OOB for TLSfrag

--- a/config.json
+++ b/config.json
@@ -15,6 +15,8 @@
         "mode": "TLSfrag",
         "num_tcp_pieces": 8,
         "num_tls_pieces": 8,
+        "oob_offset": 3,
+        "oob_str": "a",
         "len_tcp_sni": 4,
         "len_tls_sni": 3,
         "send_interval": 0.01,
@@ -29,7 +31,7 @@
     },
     "IPs": {
         "(104.16.0.0/13|104.24.0.0/14|172.64.0.0/13|162.158.0.0/15|2606:4700::/32|2400:cb00::/32|2400:cb00::/32)": {
-            "route": "^172.64.144.4/30",
+            "route": "^172.64.144.12/30",
             "CDN": "CloudFlare"
         },
         "2400:cb00::/32": {
